# pytkutils

./: README.md  pyproject.toml  setup.py
pytkutils/: compression.py
shapecomp/: __init__.py  compression.py  shapecomp.py
shapecompress/: __init__.py  compression.py  shapecompress.py
tests/: __init__.py  test_compression.py  test_wrapper.py
